--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 /Clase 1/Ejemplo 1/nbproject/private/
+/Ejemplo1/nbproject/private/
+/Ejemplo1/build/
+/JavaApplication34/nbproject/private/
+/JavaApplication34/build/
