Ejemplo extra practica2

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@
 /Clase6/build/
 /Clase8/nbproject/private/
 /Clase8/build/
+/Clase8Extra/nbproject/private/
+/Clase8Extra/build/
+/extraHilos/nbproject/private/
+/extraHilos/build/
+/extraHilos/dist/
+/EjemploExtraPractica2/nbproject/private/
+/EjemploExtraPractica2/build/
+/EjemploExtraPractica2/dist/
